# SF-Sync

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
docs/: SF-Sync.md
scripts/: fetch-rclone.ps1  preview-server.mjs  sign-exe.ps1
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acl.rs  control.rs  dpapi.rs  google.rs  jobobj.rs  lib.rs  lock.rs  main.rs  sync.rs
worker/: .dev.vars.example  package.json  schema-control.sql  wrangler.toml
worker/src/: control.ts  crypto.ts  email.ts  index.ts  landing.ts
